infrastructure/nacos/base/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
    spec:
      containers:
        - name: nacos
          image: nacos/nacos-server:v2.5.1
          ports:
            - containerPort: 8848
              name: client
            - containerPort: 9848
              name: client-rpc
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
          volumeMounts:
            - name: nacos-storage
              mountPath: /home/nacos/data
      volumes:
        - name: nacos-storage
          persistentVolumeClaim:
            claimName: nacos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-service
spec:
  selector:
    app: nacos
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 9848
      name: client-rpc
      targetPort: 9848
  clusterIP: None
