infrastructure/nacos/base/nacos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shuailli.online
      secretName: shuailli-tls-secret
  rules:
    - host: "shuailli.online"
      http:
        paths:
          - path: /nacos
            pathType: Prefix
            backend:
              service:
                name: nacos-service
                port:
                  number: 8848
